fixed text to wrap properly

--- a/styles.css
+++ b/styles.css
@@ -53,3 +53,7 @@ button {
   .kc{
       float: left;
   }
+
+  .sc{
+    margin-top: 200px;
+  }
